# tree_detection

./: Dockerfile  README.md  main.py  output_adaptive.csv  pyproject.toml  results.csv  results_r_1.2.csv  results_r_1.4.csv  results_r_1.5.csv  tree_detect_kd.py
data/: field_survey.geojson
data/als/: plot_01.copc.laz  plot_04.copc.laz  plot_05.las
data/ortho/: plot_01.tif  plot_01.tif.aux.xml  plot_02.tif  plot_03.tif  plot_04.tif  plot_05.tif  plot_06.tif  plot_07.tif  plot_08.tif  plot_09.tif  plot_10.tif
scripts/: random_forest.ipynb  results_viz.ipynb  rf_report.csv  rf_report_table.csv  test1.ipynb
scripts/.ipynb_checkpoints/: test1-checkpoint.ipynb  viz-checkpoint.ipynb
tree_detection_algo/: crop.py  detect.py  evaluate.py  filter.py  load.py  match.py  normalize.py  viz.py
